<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/act_dimen"
        android:layout_marginEnd="@dimen/act_dimen"
        android:layout_marginTop="@dimen/act_dimen"
        android:layout_marginBottom="@dimen/act_dimen"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nama_produk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_none"
            android:textSize="@dimen/size_title"/>
        <TextView
            android:id="@+id/harga_produk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_zero"
            android:textSize="@dimen/size_title"
            android:textColor="@color/colorPrimaryDark"/>
        <View
            android:layout_marginTop="@dimen/act_dimen"
            android:layout_marginBottom="@dimen/act_dimen"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seller"
            android:textSize="@dimen/size_title"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_dimen"
            android:layout_marginBottom="@dimen/act_dimen"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/act_dimen"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/potoku"/>
                <LinearLayout
                    android:paddingStart="@dimen/act_dimen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/namaku"
                        android:textSize="@dimen/size_sub"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emailku"
                        android:textSize="@dimen/size_desc"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_marginTop="@dimen/act_dimen"
            android:layout_marginBottom="@dimen/act_dimen"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorline"/>
        <Button
            android:id="@+id/btnBeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/buy"
            android:textColor="@color/colorwhite"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>